add some icons and  sort out order

--- a/index.html
+++ b/index.html
@@ -70,15 +70,7 @@
           class="waves-effect waves-dark teal-text"><i
             class="mdi-action-trending-up small"></i><span>Experience</span></a>
       </li>
-
-      <li class="bold">
-        <!-- mdi-av-web small
-             mdi-av-my-library-books small-->
-        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
-            class="mdi-av-my-library-books small"></i><span>Projects</span></a>
-      </li>
-
-      <li class="bold">
+  <li class="bold">
         <!--
         ICONS:
         mdi-action-assessment
@@ -88,13 +80,26 @@
         <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
             class="mdi-action-assessment small"></i><span>Skills</span></a>
       </li>
-      
+
       <li class="bold">
+        <a aria-label="Navigate to the Certifications section" href="#certifications"
+          class="waves-effect waves-dark teal-text"><i
+            class="mdi-certificate small"></i><span>Certifications</span></a>
+      </li>
+
+ <li class="bold">
         <!--
         ICONS:
         -->
         <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
             class="mdi-social-school small"></i><span>Education</span></a>
+      </li>
+
+      <li class="bold">
+        <!-- mdi-av-web small
+             mdi-av-my-library-books small-->
+        <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
+            class="mdi-av-my-library-books small"></i><span>Projects</span></a>
       </li>
 
       <li class="bold">
@@ -405,6 +410,9 @@ such as login/sign up, view a product, add a product to cart, checkout the order
           </div>
         </div>
 
+ <section id="certifications" class="section scrollspy">
+      <h3 class="page-title white-text teal">Skills</h3>
+      <div class="container">
 <!-- To add certifications as a new section and in side nav bar -->
          <div class="card">
           <div class="card-content">
