--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <!-- End Google Tag Manager -->
 
   <!-- Materialize - Compiled and minified CSS-->
+ <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css" />
   <!-- Font Awesome Icon - CSS-->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -84,7 +85,8 @@
       <li class="bold">
         <a aria-label="Navigate to the Certifications section" href="#certifications"
           class="waves-effect waves-dark teal-text"><i
-            class="mdi-certificate small"></i><span>Certifications</span></a>
+               <i class="material-icons small">verified</i>
+	<span>Certifications</span></a>
       </li>
 
  <li class="bold">
@@ -414,6 +416,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             </div>
           </div>
         </div>
+    </section>
 
  <section id="certifications" class="section scrollspy">
       <h3 class="page-title white-text teal">Certifications</h3>
