--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- End Google Tag Manager -->
 
   <!-- Materialize - Compiled and minified CSS-->
- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+ <link href="https://cdn.materialdesignicons.com/7.2.96/css/materialdesignicons.min.css" rel="stylesheet">
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/materialize/0.95.3/css/materialize.min.css" />
   <!-- Font Awesome Icon - CSS-->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -85,7 +85,7 @@
       <li class="bold">
         <a aria-label="Navigate to the Certifications section" href="#certifications"
           class="waves-effect waves-dark teal-text"><i
-               <i class="material-icons small">verified</i>
+              <i class="mdi mdi-certificate small"></i>
 	<span>Certifications</span></a>
       </li>
 
