test format fix

--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
       <li class="bold">
         <a aria-label="Navigate to the Certifications section" href="#certifications"
           class="waves-effect waves-dark teal-text"><i
-              <i class="mdi mdi-certificate small"></i>
-	<span>Certifications</span></a>
+              <i class="mdi-certificate small"></i><span>Certifications</span></a>
       </li>
 
  <li class="bold">
