--- a/index.html
+++ b/index.html
@@ -430,21 +430,22 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                   <div class="col s12 m6 l6">
                     <div class="card">
                       <div class="card-image">
-                        <img src="/assets/img/mooc-machine-learning-coursera-800x500.jpg">
+                        <img src="/assets/img/logosecurityplus.jpg">
                       </div>
                       <div class="card-content">
-                        <span class="card-title teal-text">Machine Learning (Stanford)</span>
+<a href="https://www.credly.com/badges/5f101cd7-6d65-4078-a4b3-83960fccf82e" target="_blank" rel="noopener noreferrer">
+                        <span class="card-title teal-text">CompTIA Security+</span>
                       </div>
                     </div>
                   </div>
 
-                  <div class="col s12 m6 l6">
+               <!--   <div class="col s12 m6 l6">
                     <div class="card">
                       <div class="card-image">
                         <img src="/assets/img/mooc-algorithms-stanford-2-800x500.jpg">
                       </div>
                       <div class="card-content">
-                        <span class="card-title teal-text">Algorithms (Stanford)</span>
+                        <span class="card-title teal-text">Algorithms (Stanford)</span> -->
                       </div>
                     </div>
                   </div>
