--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                   <div class="col s12 m6 l6">
                     <div class="card">
                       <div class="card-image">
-                        <img src="/assets/img/logosecurityplus.jpg">
+                        <img src="/assets/img/blob.png">
                       </div>
                       <div class="card-content">
 <a href="https://www.credly.com/badges/5f101cd7-6d65-4078-a4b3-83960fccf82e" target="_blank" rel="noopener noreferrer">
