change  cert size

--- a/index.html
+++ b/index.html
@@ -427,10 +427,10 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             <div class="row text-left">
               <div class="container">
                 <div class="row">
-                  <div class="col s12 m6 l6">
+                  <div class="col s12 m4 l4">
                     <div class="card">
                       <div class="card-image">
-                        <img src="/assets/img/blob.png">
+                        <img src="/assets/img/blob.png" style="max-width: 100px; margin: auto; display: block;">
                       </div>
                       <div class="card-content">
 <a href="https://www.credly.com/badges/5f101cd7-6d65-4078-a4b3-83960fccf82e" target="_blank" rel="noopener noreferrer">
