--- a/index.html
+++ b/index.html
@@ -434,7 +434,8 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                       </div>
                       <div class="card-content">
 <a href="https://www.credly.com/badges/5f101cd7-6d65-4078-a4b3-83960fccf82e" target="_blank" rel="noopener noreferrer">
-                        <span class="card-title teal-text">CompTIA Security+</span>
+                        <div class="card-title teal-text center-align">CompTIA Security+</div>
+  </a>
                       </div>
                     </div>
                   </div>
@@ -472,7 +473,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             <img src="/assets/img/NTU_Logo.jpg" alt="NTU Logo" style="max-height: 80px; margin-bottom: 10px;" />
             <br>
             <!-- School Info -->
-            <span class="card-title">
+            <span class="card-title" style="font-size: 1.5rem; line-height: 1.8rem;">
               <a href="https://www.ntu.edu.sg/" target="_blank" class="teal-text hoverline">
                 Nanyang Technological University
               </a>
