update ccna1 cert

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
  <section id="certifications" class="section scrollspy">
       <h3 class="page-title white-text teal">Certifications</h3>
       <div class="container">
-<!-- To add certifications as a new section and in side nav bar -->
+<!-- Certifications -->
          <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Certificates</h4>
@@ -439,6 +439,20 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                       </div>
                     </div>
                   </div>
+
+<div class="col s12 m4 l4">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/assets/img/CCNAITN__1_.png" style="max-width: 100px; margin: auto; display: block;">
+                      </div>
+                      <div class="card-content">
+<a href="https://www.credly.com/badges/5f101cd7-6d65-4078-a4b3-83960fccf82e" target="_blank" rel="noopener noreferrer">
+                        <div class="card-title teal-text center-align">CCNA: Introduction to Networks</div>
+  </a>
+                      </div>
+                    </div>
+                  </div>
+
 
                <!--   <div class="col s12 m6 l6">
                     <div class="card">
