add in aws  cert

--- a/index.html
+++ b/index.html
@@ -446,12 +446,26 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                         <img src="/assets/img/CCNAITN__1_.png" style="max-width: 100px; margin: auto; display: block;">
                       </div>
                       <div class="card-content">
-<a href="https://www.credly.com/badges/5f101cd7-6d65-4078-a4b3-83960fccf82e" target="_blank" rel="noopener noreferrer">
+<a href="https://www.credly.com/badges/e9322b32-c254-466f-b693-5f994c2ed473" target="_blank" rel="noopener noreferrer">
                         <div class="card-title teal-text center-align">CCNA: Introduction to Networks</div>
   </a>
                       </div>
                     </div>
                   </div>
+
+<div class="col s12 m4 l4">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/assets/img/AWS-cloud.png" style="max-width: 100px; margin: auto; display: block;">
+                      </div>
+                      <div class="card-content">
+<a href="https://www.credly.com/badges/07f8648a-fce9-4f29-95d4-4910ccad6831" target="_blank" rel="noopener noreferrer">
+                        <div class="card-title teal-text center-align">AWS Academy Cloud Foundations</div>
+  </a>
+                      </div>
+                    </div>
+                  </div>
+
 
 
                <!--   <div class="col s12 m6 l6">
