add in  google cert

--- a/index.html
+++ b/index.html
@@ -466,8 +466,18 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                     </div>
                   </div>
 
-
-
+<div class="col s12 m4 l4">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/assets/img/googlecyber.png" style="max-width: 100px; margin: auto; display: block;">
+                      </div>
+                      <div class="card-content">
+<a href="https://www.credly.com/badges/f2c070d3-4a96-4696-807c-9426ca050b1a" target="_blank" rel="noopener noreferrer">
+                        <div class="card-title teal-text center-align">Google Cybersecurity Professional Certificate</div>
+  </a>
+                      </div>
+                    </div>
+                  </div>
                <!--   <div class="col s12 m6 l6">
                     <div class="card">
                       <div class="card-image">
