add in more certs

--- a/index.html
+++ b/index.html
@@ -478,6 +478,86 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                       </div>
                     </div>
                   </div>
+
+<div class="col s12 m4 l4">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/assets/img/googlecyber.png" style="max-width: 100px; margin: auto; display: block;">
+                      </div>
+                      <div class="card-content">
+<a href="https://www.credly.com/badges/f2c070d3-4a96-4696-807c-9426ca050b1a" target="_blank" rel="noopener noreferrer">
+                        <div class="card-title teal-text center-align">Introduction to Cybersecurity</div>
+  </a>
+                      </div>
+                    </div>
+                  </div>
+
+<div class="col s12 m4 l4">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/assets/img/googlecyber.png" style="max-width: 100px; margin: auto; display: block;">
+                      </div>
+                      <div class="card-content">
+<a href="https://www.credly.com/badges/fb7ce478-4fa9-4279-86fb-87f38dfe5c3e" target="_blank" rel="noopener noreferrer">
+                        <div class="card-title teal-text center-align">Introduction to Cybersecurity</div>
+  </a>
+                      </div>
+                    </div>
+                  </div>
+
+
+<div class="col s12 m4 l4">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/assets/img/CTM.png" style="max-width: 100px; margin: auto; display: block;">
+                      </div>
+                      <div class="card-content">
+<a href="https://www.credly.com/badges/430ffe71-21f2-45b8-a238-b8d317031c00" target="_blank" rel="noopener noreferrer">
+                        <div class="card-title teal-text center-align">Cyber Threat Management</div>
+  </a>
+                      </div>
+                    </div>
+                  </div>
+
+<div class="col s12 m4 l4">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/assets/img/EH.png" style="max-width: 100px; margin: auto; display: block;">
+                      </div>
+                      <div class="card-content">
+<a href="https://www.credly.com/badges/b1dcfc80-47ea-416b-a435-59010cefdd75" target="_blank" rel="noopener noreferrer">
+                        <div class="card-title teal-text center-align">Ethical Hacker</div>
+  </a>
+                      </div>
+                    </div>
+                  </div>
+
+<div class="col s12 m4 l4">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/assets/img/ND.png" style="max-width: 100px; margin: auto; display: block;">
+                      </div>
+                      <div class="card-content">
+<a href="https://www.credly.com/badges/08b1eb9c-d37a-4d3c-8ae9-176d10473559" target="_blank" rel="noopener noreferrer">
+                        <div class="card-title teal-text center-align">Network Defense</div>
+  </a>
+                      </div>
+                    </div>
+                  </div>
+
+<div class="col s12 m4 l4">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/assets/img/ES.png" style="max-width: 100px; margin: auto; display: block;">
+                      </div>
+                      <div class="card-content">
+<a href="https://www.credly.com/badges/347761cb-ab47-40b1-9710-abbff3e718d5" target="_blank" rel="noopener noreferrer">
+                        <div class="card-title teal-text center-align">Endpoint Security</div>
+  </a>
+                      </div>
+                    </div>
+                  </div>
+
                <!--   <div class="col s12 m6 l6">
                     <div class="card">
                       <div class="card-image">
