--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
 <div class="col s12 m4 l4">
                     <div class="card">
                       <div class="card-image">
-                        <img src="/assets/img/googlecyber.png" style="max-width: 100px; margin: auto; display: block;">
+                        <img src="/assets/img/IntrotoCyber.png" style="max-width: 100px; margin: auto; display: block;">
                       </div>
                       <div class="card-content">
 <a href="https://www.credly.com/badges/f2c070d3-4a96-4696-807c-9426ca050b1a" target="_blank" rel="noopener noreferrer">
