--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                       </div>
                       <div class="card-content">
 <a href="https://www.credly.com/badges/f2c070d3-4a96-4696-807c-9426ca050b1a" target="_blank" rel="noopener noreferrer">
-                        <div class="card-title teal-text center-align">Google Cybersecurity Professional Certificate</div>
+                        <div class="card-title teal-text center-align">Cybersecurity Professional Certificate</div>
   </a>
                       </div>
                     </div>
@@ -486,19 +486,6 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                       </div>
                       <div class="card-content">
 <a href="https://www.credly.com/badges/f2c070d3-4a96-4696-807c-9426ca050b1a" target="_blank" rel="noopener noreferrer">
-                        <div class="card-title teal-text center-align">Introduction to Cybersecurity</div>
-  </a>
-                      </div>
-                    </div>
-                  </div>
-
-<div class="col s12 m4 l4">
-                    <div class="card">
-                      <div class="card-image">
-                        <img src="/assets/img/googlecyber.png" style="max-width: 100px; margin: auto; display: block;">
-                      </div>
-                      <div class="card-content">
-<a href="https://www.credly.com/badges/fb7ce478-4fa9-4279-86fb-87f38dfe5c3e" target="_blank" rel="noopener noreferrer">
                         <div class="card-title teal-text center-align">Introduction to Cybersecurity</div>
   </a>
                       </div>
