--- a/index.html
+++ b/index.html
@@ -505,6 +505,8 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                       </div>
                     </div>
                   </div>
+</div>
+</div>
 
 <div class="col s12 m4 l4">
                     <div class="card">
