update all certs

--- a/index.html
+++ b/index.html
@@ -546,6 +546,32 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                     </div>
                   </div>
 
+<div class="col s12 m4 l4">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/assets/img/Shopee.png" style="max-width: 100px; margin: auto; display: block;">
+                      </div>
+                      <div class="card-content">
+<a href="https://www.credly.com/badges/475bf785-6b79-4845-bf96-ad1f45d57e71" target="_blank" rel="noopener noreferrer">
+                        <div class="card-title teal-text center-align">Shopee Code League</div>
+  </a>
+                      </div>
+                    </div>
+                  </div>
+
+<div class="col s12 m4 l4">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/assets/img/sincon.png" style="max-width: 100px; margin: auto; display: block;">
+                      </div>
+                      <div class="card-content">
+<a href="https://www.credly.com/badges/1bfca466-7585-410e-8936-1b09d0145e8c" target="_blank" rel="noopener noreferrer">
+                        <div class="card-title teal-text center-align">Infosec In the City, SINCON</div>
+  </a>
+                      </div>
+                    </div>
+                  </div>
+
                <!--   <div class="col s12 m6 l6">
                     <div class="card">
                       <div class="card-image">
