add all  other certs link

--- a/index.html
+++ b/index.html
@@ -571,16 +571,13 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                       </div>
                     </div>
                   </div>
+ </div>
 
-               <!--   <div class="col s12 m6 l6">
-                    <div class="card">
-                      <div class="card-image">
-                        <img src="/assets/img/mooc-algorithms-stanford-2-800x500.jpg">
-                      </div>
-                      <div class="card-content">
-                        <span class="card-title teal-text">Algorithms (Stanford)</span> -->
-                      </div>
-                    </div>
+        <!-- Add this note below cards -->
+       <p class="grey-text text-darken-1" style="margin-top: 1rem; font-style: italic;">
+  For all other certificates, please refer to <a href="https://drive.google.com/file/d/1h_jsf2oqJAGaiAHzIN5xzST9bsbgToJc/view?usp=sharing" target="_blank" rel="noopener noreferrer">here</a>.
+</p>
+                     </div>
                   </div>
                 </div>
               </div>
@@ -624,6 +621,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
               <li>Security & Risks Management</li>
               <li>Network Security</li>
               <li>Privacy Preserving Technologies & Security in AI</li>
+		<li>Forensics</li>
             </ul>
           </div>
         </div>
