--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
             <h4 class="brown-text light">Certificates</h4>
             <div class="row text-left">
               <div class="container">
-                <div class="row">
+                <div class="row" style="margin-bottom: 2rem;">
                   <div class="col s12 m4 l4">
                     <div class="card">
                       <div class="card-image">
@@ -572,8 +572,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                     </div>
                   </div>
  </div>
-<br>
-<br>
+
         <!-- Add this note below cards -->
        <p class="grey-text text-darken-1" style="margin-top: 1rem; font-style: italic;">
   For all other certificates, please refer to <a href="https://drive.google.com/file/d/1h_jsf2oqJAGaiAHzIN5xzST9bsbgToJc/view?usp=sharing" target="_blank" rel="noopener noreferrer">here</a>.
