amend  cert name

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
                       </div>
                       <div class="card-content">
 <a href="https://www.credly.com/badges/f2c070d3-4a96-4696-807c-9426ca050b1a" target="_blank" rel="noopener noreferrer">
-                        <div class="card-title teal-text center-align">Cybersecurity Professional Certificate</div>
+                        <div class="card-title teal-text center-align">Google Cybersecurity Professional</div>
   </a>
                       </div>
                     </div>
