add in DIS skills and upload  image

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@ such as login/sign up, view a product, add a product to cart, checkout the order
 
 <strong>Frameworks & Methodologies:</strong> MITRE ATT&CK, Cyber Kill Chain, OODA Loop, Mental Models, Thirty-Six Stratagems<br>
 
-<strong>Professional:</strong> Leadership, Staff Work, Teamwork, Discipline              </li>
+<strong>Professional:</strong> Leadership, Staff Work, Teamwork, Discipline, Presentations, Officer’s Creed, Military Expert’s Creed </li>
             </ul>
           </div>
         </div>
