correct syntax, cert icon

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
       <li class="bold">
         <a aria-label="Navigate to the Certifications section" href="#certifications"
-          class="waves-effect waves-dark teal-text"><i
+          class="waves-effect waves-dark teal-text">
               <i class="mdi mdi-certificate small"></i><span>Certifications</span></a>
       </li>
 
