change exp icon

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
           class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-trending-up small"></i><span>Experience</span></a>
+            class="mdi mdi-briefcase-check small"></i><span>Experience</span></a>
       </li>
   <li class="bold">
         <!--
@@ -148,7 +148,7 @@
       <li class="bold">
         <a aria-label="Navigate to the Experience section" href="#experience"
           class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-trending-up small"></i><span>Experience</span></a>
+            class="mdi mdi-briefcase-check small"></i><span>Experience</span></a>
       </li>
 <li class="bold">
         <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
