change skills icon

--- a/index.html
+++ b/index.html
@@ -72,14 +72,9 @@
             class="mdi mdi-briefcase-check small"></i><span>Experience</span></a>
       </li>
   <li class="bold">
-        <!--
-        ICONS:
-        mdi-action-assessment
-        mdi-social-poll
-        mdi-av-equalizer
-        -->
+      
         <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-assessment small"></i><span>Skills</span></a>
+            class="mdi mdi-cogs small"></i><span>Skills</span></a>
       </li>
 
       <li class="bold">
@@ -152,7 +147,7 @@
       </li>
 <li class="bold">
         <a aria-label="Navigate to the Skills section" href="#skills" class="waves-effect waves-dark teal-text"><i
-            class="mdi-action-assessment small"></i><span>Skills</span></a>
+            class="mdi mdi-cogs small"></i><span>Skills</span></a>
       </li>
 <li class="bold">
         <a aria-label="Navigate to the Certifications section" href="#certifications" class="waves-effect waves-dark teal-text"><i
