change edu image

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         ICONS:
         -->
         <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
-            class="mdi-social-school small"></i><span>Education</span></a>
+            class="mdi mdi-school-outline small"></i><span>Education</span></a>
       </li>
 
       <li class="bold">
@@ -99,12 +99,7 @@
       </li>
 
       <li class="bold">
-        <!-- 
-        1. mdi-communication-contacts
-        2. mdi-content-mail
-        3. mdi-communication-email
-        -->
-        <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
+               <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
             class="mdi-content-mail small"></i><span>Contact</span></a>
       </li>
 
@@ -151,12 +146,12 @@
       </li>
 <li class="bold">
         <a aria-label="Navigate to the Certifications section" href="#certifications" class="waves-effect waves-dark teal-text"><i
-            class="mdi-certificate small"></i><span>Certifications</span></a>
+            class="mdi mdi-certificate small"></i><span>Certifications</span></a>
       </li>
 
 <li class="bold">
         <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
-            class="mdi-social-school small"></i><span>Education</span></a>
+            class="mdi mdi-school-outline small"></i><span>Education</span></a>
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
