change project icon

--- a/index.html
+++ b/index.html
@@ -92,10 +92,9 @@
       </li>
 
       <li class="bold">
-        <!-- mdi-av-web small
-             mdi-av-my-library-books small-->
+       
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
-            class="mdi-av-my-library-books small"></i><span>Projects</span></a>
+            class="mdi mdi-book-open-page-variant small"></i><span>Projects</span></a>
       </li>
 
       <li class="bold">
@@ -155,7 +154,7 @@
       </li>
       <li class="bold">
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
-            class="mdi-av-my-library-books small"></i><span>Projects</span></a>
+            class="mdi mdi-book-open-page-variant small"></i><span>Projects</span></a>
       </li>
          
       <li class="bold">
