change contact  and resume icon

--- a/index.html
+++ b/index.html
@@ -99,21 +99,13 @@
 
       <li class="bold">
                <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
-            class="mdi-content-mail small"></i><span>Contact</span></a>
+            class="mdi mdi-email-outline small"></i><span>Contact</span></a>
       </li>
 
       <li class="bold">
-        <!--
-        ICONS:
-        1. mdi-action-description
-        2. mdi-file-folder
-        3. mdi-file-folder-open
-        4. mdi-file-attachment
-        5. mdi-file-folder-shared
-        -->
 
         <a aria-label="Open Gadiel's resume in a new tab" href="https://glrz.github.io/assets/resume/Gadiel Lau_CSIT_CTI.pdf" target="_blank"
-        class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
+        class="waves-effect waves-dark teal-text"><i class="mdi mdi-file-account-outline small"></i><span>Resume</span></a>  
       </li>
     </ul>
   </nav>
@@ -159,12 +151,12 @@
          
       <li class="bold">
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
-            class="mdi-content-mail small"></i><span>Contact</span></a>
+            class="mdi mdi-email-outline small"></i><span>Contact</span></a>
       </li>
       <li class="bold">
         <a aria-label="Open Gadiel's Resume in a new tab"
           href="https://drive.google.com/file/d/1B6MZ1z0-7NsefC3Lm_q-uhib28MTqpE9/view?usp=sharing" target="_blank"
-          class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
+          class="waves-effect waves-dark teal-text"><i class="mdi mdi-file-account-outline small"></i><span>Resume</span></a>
       </li>
     </ul>
   </nav>
