change menu icon for phone

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <!-- Nav class 2 -->
   <nav class="hide-on-large only trigger z-depth-1">
     <a aria-label="Toggle visibility of the mobile navbar" href="#" data-activates="slide-out"
-      class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+      class="button-collapse"><i class="mdi mdi-menu"></i></a>
     <div class="name-title">
       <a id="name" aria-label="Navigate to the beginning of the page" href="#" class="teal-text">Gadiel Lau</a><span class="black-text">Cybersecurity Analyst</span>
     </div>
