add  in  ntu cyber club

--- a/index.html
+++ b/index.html
@@ -602,6 +602,11 @@ such as login/sign up, view a product, add a product to cart, checkout the order
               <li>Privacy Preserving Technologies & Security in AI</li>
 		<li>Forensics</li>
             </ul>
+		<p><b>Clubs & Societies:</b></p>
+<ul>
+              <li>NTU Cybersecurity Club: Participated in cybersecurity training sessions and workshops to enhance technical skills and industry knowledge</li>
+
+  </ul>
           </div>
         </div>
       </div>
