add in achievement sections

--- a/index.html
+++ b/index.html
@@ -84,10 +84,7 @@
       </li>
 
  <li class="bold">
-        <!--
-        ICONS:
-        -->
-        <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
+               <a aria-label="Navigate to the Education section" href="#education" class="waves-effect waves-dark teal-text"><i
             class="mdi mdi-school-outline small"></i><span>Education</span></a>
       </li>
 
@@ -96,6 +93,14 @@
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
             class="mdi mdi-book-open-page-variant small"></i><span>Projects</span></a>
       </li>
+
+<!-- New Achievements Section -->
+<li class="bold">
+  <a aria-label="Navigate to the Achievements section" href="#achievements" class="waves-effect waves-dark teal-text">
+    <i class="mdi mdi-trophy-outline small"></i>
+    <span>Achievements</span>
+  </a>
+</li>
 
       <li class="bold">
                <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
