add nav to achievements

--- a/index.html
+++ b/index.html
@@ -153,6 +153,10 @@
         <a aria-label="Navigate to the Projects section" href="#projects" class="waves-effect waves-dark teal-text"><i
             class="mdi mdi-book-open-page-variant small"></i><span>Projects</span></a>
       </li>
+      <li class="bold">
+        <a aria-label="Navigate to the Achievements section" href="#achievements" class="waves-effect waves-dark teal-text"><i
+            class="mdi mdi-trophy-outline small"></i><span>Achievements</span></a>
+      </li>
          
       <li class="bold">
         <a aria-label="Navigate to the Contact section" href="#contact" class="waves-effect waves-dark teal-text"><i
