--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/328A.jpg" class="circle img-responsive profile-pic" alt="avatar">
+          <img src="/assets/img/328A.jpg" class="circle img-responsive profile-pic" alt="avatar" style="width: 80px; height: 80px; display: block; margin: 0 auto;">
         </a>
       </li>
 
