add in achievement

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <li class="logo">
         <a id="logo-container" aria-label="Navigate to the beginning of the page" href="#intro"
           class="brand-logo grey-blue-text">
-          <img src="/assets/img/328A.jpg" class="circle img-responsive profile-pic" alt="avatar" style="width: 80px; height: 80px; display: block; margin: 0 auto;">
+          <img src="/assets/img/328A.jpg" class="circle img-responsive profile-pic" alt="avatar" style="width: 100px; height: 100px; display: block; margin: 0 auto;">
         </a>
       </li>
 
@@ -702,6 +702,32 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
             </div>
           </div>
     </section>
+
+  <!-- New Section: Achievements -->
+<section id="achievements" class="section scrollspy">
+  <h3 class="page-title white-text teal">Achievements</h3>
+  <div class="container">
+    <div class="row">
+      
+      <!-- IRAS Silver Award -->
+      <div class="col s12 m6 l6">
+        <div class="card">
+          <div class="card-content">
+            <!-- Award Photo -->
+            <img src="/assets/img/gradpic.jpeg" alt="gradpic" style="max-height: 80px; margin-bottom: 10px;" />
+            <br>
+                       <p>
+              <b>Event:</b> IRAS Silver Award at SIM Global Education <br>
+              <b>Date:</b> Apr 2024
+            </p>
+                 </div>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+</section>
 
 
     <!-- Eight Section: Contact -->
