change ach format

--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
 <!-- New Achievements Section -->
 <li class="bold">
   <a aria-label="Navigate to the Achievements section" href="#achievements" class="waves-effect waves-dark teal-text">
-    <i class="mdi mdi-trophy-outline small"></i>
-    <span>Achievements</span>
+    <i class="mdi mdi-trophy-outline small"></i><span>Achievements</span>
   </a>
 </li>
 
@@ -708,22 +707,20 @@ This collection includes CTF competitions/challenges, in areas like OSINT, Web, 
   <h3 class="page-title white-text teal">Achievements</h3>
   <div class="container">
     <div class="row">
-      
-      <!-- IRAS Silver Award -->
+
+      <!-- IRAS Silver Award Card -->
       <div class="col s12 m6 l6">
-        <div class="card">
+        <div class="card hoverable">
+          <div class="card-image center-align" style="padding-top: 10px;">
+            <img src="/assets/img/gradpic.jpeg" alt="IRAS Silver Award" style="max-height: 100px; object-fit: contain;">
+          </div>
           <div class="card-content">
-            <!-- Award Photo -->
-            <img src="/assets/img/gradpic.jpeg" alt="gradpic" style="max-height: 80px; margin-bottom: 10px;" />
-            <br>
-                       <p>
-              <b>Event:</b> IRAS Silver Award at SIM Global Education <br>
-              <b>Date:</b> Apr 2024
-            </p>
-                 </div>
+            <span class="card-title teal-text text-darken-3" style="font-weight: 600;">IRAS Silver Award</span>
+            <p><b>Event:</b> SIM Global Education</p>
+            <p><b>Date:</b> April 2024</p>
+          </div>
         </div>
       </div>
-
 
     </div>
   </div>
